force-app/main/default/objects/DmlRetryJob__c/DmlRetryJob__c.object-meta.xml
<CustomObject>
    <label>DmlRetryJob</label>
    <nameField>
        <label>DmlRetryJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DmlRetryJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>