force-app/main/default/objects/DmlRetryJob__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>