force-app/main/default/objects/DmlRetryJob__c/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <label>ErrorStackTrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>