force-app/main/default/objects/DmlRetryJob__c/fields/ExternalIdField__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdField__c</fullName>
    <description>For upserts</description>
    <label>ExternalIdField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>