force-app/main/default/objects/DmlRetryJob__c/fields/IsAsync__c.field-meta.xml
<CustomField>
    <fullName>IsAsync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAsync</label>
    <type>Checkbox</type>
</CustomField>