force-app/main/default/objects/DmlRetryJob__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DO_INSERT</fullName>
            </value>
            <value>
                <fullName>DO_UPDATE</fullName>
            </value>
            <value>
                <fullName>DO_UPSERT</fullName>
            </value>
            <value>
                <fullName>DO_DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>