force-app/main/default/objects/DmlRetryJob__c/fields/RetryLeft__c.field-meta.xml
<CustomField>
    <fullName>RetryLeft__c</fullName>
    <label>RetryLeft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>