force-app/main/default/objects/DmlRetryJob__c/fields/SerializedRecord__c.field-meta.xml
<CustomField>
    <fullName>SerializedRecord__c</fullName>
    <description>Store records in JSON or serialized format</description>
    <label>SerializedRecord</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>