force-app/main/default/objects/DmlRetryJob__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObjectType</label>
    <length>200</length>
    <type>Text</type>
</CustomField>