force-app/main/default/objects/DmlRetryJob__c/fields/UtilityId__c.field-meta.xml
<CustomField>
    <fullName>UtilityId__c</fullName>
    <description>External key for identifying jobs (helpful for scaling)</description>
    <label>UtilityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>